<?xml version="1.0"?>
<package format="2">
  <name>tutorial_cpp</name>
  <version>0.0.0</version>
  <description>Basic ROS1 publisher and subscriber nodes, plus a dummy custom message publisher, written in C++</description>

  <maintainer email="roberto.canale.work@gmail.com">Roberto Canale</maintainer>
  <maintainer email="filip_hesse@yahoo.de">Filip Hesse</maintainer>
  <maintainer email="leej1996@gmail.com">Justin Lee</maintainer>
  <maintainer email="danieto98@gmail.com">Daniel Nieto</maintainer>
  <maintainer email="imstevenpm.study@gmail.com">Steven Palma</maintainer>
  <maintainer email="rueda_999@hotmail.com">Josep Rueda</maintainer>

  <license>BSD</license>

  <author email="roberto.canale.work@gmail.com">Roberto Canale</author>
  <author email="filip_hesse@yahoo.de">Filip Hesse</author>
  <author email="leej1996@gmail.com">Justin Lee</author>
  <author email="danieto98@gmail.com">Daniel Nieto</author>
  <author email="imstevenpm.study@gmail.com">Steven Palma</author>
  <author email="rueda_999@hotmail.com">Josep Rueda</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tutorial_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tutorial_msgs</exec_depend>

  <export>
  </export>
</package>
