<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tutorial_py</name>
  <version>0.0.0</version>
  <description>ROS2 Publisher/Subscriber Python nodes</description>

  <maintainer email="roberto.canale.work@gmail.com">Roberto Canale</maintainer>
  <maintainer email="filip_hesse@yahoo.de">Filip Hesse</maintainer>
  <maintainer email="leej1996@gmail.com">Justin Lee</maintainer>
  <maintainer email="danieto98@gmail.com">Daniel Nieto</maintainer>
  <maintainer email="imstevenpm.study@gmail.com">Steven Palma</maintainer>
  <maintainer email="rueda_999@hotmail.com">Josep Rueda</maintainer>
  
  <license>Apache License 2.0</license>

  <author email="roberto.canale.work@gmail.com">Roberto Canale</author>
  <author email="filip_hesse@yahoo.de">Filip Hesse</author>
  <author email="leej1996@gmail.com">Justin Lee</author>
  <author email="danieto98@gmail.com">Daniel Nieto</author>
  <author email="imstevenpm.study@gmail.com">Steven Palma</author>
  <author email="rueda_999@hotmail.com">Josep Rueda</author>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
